...
                app:icon="@drawable/ic_photo_20"
                app:iconGravity="textStart"
                app:iconPadding="7dp"
                app:iconSize="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_push_text"
                style="@style/Widget.Qimu.Button.Soft"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
...
